// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint createConfig frontend type 1`] = `
{
  "env": {
    "es2021": true,
    "node": true,
  },
  "globals": {
    "document": "readonly",
    "navigator": "readonly",
    "window": "readonly",
  },
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": StringMatching /@typescript-eslint/,
  "parserOptions": {
    "ecmaFeatures": {
      "jsx": true,
    },
    "ecmaVersion": 2022,
    "project": "./tsconfig.json",
    "sourceType": "module",
    "tsconfigRootDir": "~/mock-dir-name",
  },
  "plugins": [
    "promise",
    "n",
    "import",
    "react-hooks",
    "jsx-a11y",
    "react",
    "@typescript-eslint",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@babel/object-curly-spacing": [
      "off",
    ],
    "@babel/semi": [
      "off",
    ],
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/await-thenable": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "error",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/brace-style": [
      "off",
    ],
    "@typescript-eslint/comma-dangle": [
      "off",
    ],
    "@typescript-eslint/comma-spacing": [
      "off",
    ],
    "@typescript-eslint/consistent-type-assertions": [
      "error",
    ],
    "@typescript-eslint/consistent-type-definitions": [
      "error",
      "interface",
    ],
    "@typescript-eslint/explicit-member-accessibility": [
      "error",
    ],
    "@typescript-eslint/func-call-spacing": [
      "off",
    ],
    "@typescript-eslint/indent": [
      "off",
    ],
    "@typescript-eslint/keyword-spacing": [
      "off",
    ],
    "@typescript-eslint/member-delimiter-style": [
      "off",
    ],
    "@typescript-eslint/naming-convention": [
      "error",
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "StrictPascalCase",
          "UPPER_CASE",
        ],
        "leadingUnderscore": "allow",
        "selector": "default",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "StrictPascalCase",
        ],
        "selector": "typeLike",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
        ],
        "selector": "memberLike",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "StrictPascalCase",
        ],
        "selector": "enumMember",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "StrictPascalCase",
        ],
        "selector": "function",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "UPPER_CASE",
          "StrictPascalCase",
        ],
        "selector": "variable",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "UPPER_CASE",
          "StrictPascalCase",
        ],
        "leadingUnderscore": "allow",
        "modifiers": [
          "unused",
        ],
        "selector": "variable",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "StrictPascalCase",
        ],
        "selector": "parameter",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "PascalCase",
          "StrictPascalCase",
        ],
        "leadingUnderscore": "allow",
        "modifiers": [
          "unused",
        ],
        "selector": "parameter",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "StrictPascalCase",
        ],
        "selector": "typeProperty",
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-empty-function": [
      "off",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "error",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "off",
    ],
    "@typescript-eslint/no-floating-promises": [
      "error",
    ],
    "@typescript-eslint/no-for-in-array": [
      "error",
    ],
    "@typescript-eslint/no-implied-eval": [
      "error",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-misused-promises": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-argument": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-call": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-return": [
      "error",
    ],
    "@typescript-eslint/no-unused-expressions": [
      "error",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      "error",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "@typescript-eslint/no-use-before-define": [
      "error",
      {
        "functions": false,
      },
    ],
    "@typescript-eslint/no-var-requires": [
      "off",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "off",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/require-await": [
      "error",
    ],
    "@typescript-eslint/restrict-plus-operands": [
      "error",
    ],
    "@typescript-eslint/restrict-template-expressions": [
      "error",
    ],
    "@typescript-eslint/semi": [
      "off",
    ],
    "@typescript-eslint/space-before-blocks": [
      "off",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "off",
    ],
    "@typescript-eslint/space-infix-ops": [
      "off",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "off",
    ],
    "@typescript-eslint/unbound-method": [
      "error",
    ],
    "accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
        "getWithoutSet": false,
        "setWithoutGet": true,
      },
    ],
    "array-bracket-newline": [
      "off",
    ],
    "array-bracket-spacing": [
      "off",
      "never",
    ],
    "array-callback-return": [
      "error",
      {
        "allowImplicit": false,
        "checkForEach": false,
      },
    ],
    "array-element-newline": [
      "off",
    ],
    "arrow-parens": [
      "off",
    ],
    "arrow-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "babel/object-curly-spacing": [
      "off",
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      "off",
    ],
    "block-spacing": [
      "off",
      "always",
    ],
    "brace-style": [
      "off",
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "camelcase": [
      "off",
      {
        "ignoreDestructuring": false,
        "ignoreGlobals": false,
        "ignoreImports": false,
        "properties": "always",
      },
    ],
    "comma-dangle": [
      "off",
      {
        "arrays": "never",
        "exports": "never",
        "functions": "never",
        "imports": "never",
        "objects": "never",
      },
    ],
    "comma-spacing": [
      "off",
      {
        "after": true,
        "before": false,
      },
    ],
    "comma-style": [
      "off",
      "last",
    ],
    "computed-property-spacing": [
      "off",
      "never",
      {
        "enforceForClassMembers": true,
      },
    ],
    "constructor-super": [
      "off",
    ],
    "curly": [
      "error",
      "all",
    ],
    "default-case-last": [
      "error",
    ],
    "dot-location": [
      "off",
      "property",
    ],
    "dot-notation": [
      "error",
      {
        "allowKeywords": true,
        "allowPattern": "",
      },
    ],
    "eol-last": [
      "off",
    ],
    "eqeqeq": [
      "error",
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      "off",
    ],
    "flowtype/delimiter-dangle": [
      "off",
    ],
    "flowtype/generic-spacing": [
      "off",
    ],
    "flowtype/object-type-curly-spacing": [
      "off",
    ],
    "flowtype/object-type-delimiter": [
      "off",
    ],
    "flowtype/quotes": [
      "off",
    ],
    "flowtype/semi": [
      "off",
    ],
    "flowtype/space-after-type-colon": [
      "off",
    ],
    "flowtype/space-before-generic-bracket": [
      "off",
    ],
    "flowtype/space-before-type-colon": [
      "off",
    ],
    "flowtype/union-intersection-spacing": [
      "off",
    ],
    "for-direction": [
      "error",
    ],
    "func-call-spacing": [
      "off",
      "never",
    ],
    "func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "function-call-argument-newline": [
      "off",
    ],
    "function-paren-newline": [
      "off",
    ],
    "generator-star": [
      "off",
    ],
    "generator-star-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "getter-return": [
      "off",
    ],
    "implicit-arrow-linebreak": [
      "off",
    ],
    "import/default": [
      "off",
    ],
    "import/export": [
      "error",
    ],
    "import/first": [
      "error",
    ],
    "import/named": [
      "off",
    ],
    "import/namespace": [
      "off",
    ],
    "import/newline-after-import": [
      "error",
    ],
    "import/no-absolute-path": [
      "error",
      {
        "amd": false,
        "commonjs": true,
        "esmodule": true,
      },
    ],
    "import/no-duplicates": [
      "error",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "off",
    ],
    "import/no-named-default": [
      "error",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/no-webpack-loader-syntax": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "distinctGroup": true,
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "parent",
            "pattern": "@/**",
            "position": "before",
          },
        ],
        "pathGroupsExcludedImportTypes": [
          "builtin",
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "indent": [
      "off",
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "MemberExpression": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "TemplateLiteral *",
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "offsetTernaryExpressions": true,
        "outerIIFEBody": 1,
      },
    ],
    "indent-legacy": [
      "off",
    ],
    "jsx-a11y/accessible-emoji": [
      "error",
    ],
    "jsx-a11y/alt-text": [
      "error",
    ],
    "jsx-a11y/anchor-has-content": [
      "error",
    ],
    "jsx-a11y/anchor-is-valid": [
      "error",
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": [
      "error",
    ],
    "jsx-a11y/aria-props": [
      "error",
    ],
    "jsx-a11y/aria-proptypes": [
      "error",
    ],
    "jsx-a11y/aria-role": [
      "error",
    ],
    "jsx-a11y/aria-unsupported-elements": [
      "error",
    ],
    "jsx-a11y/autocomplete-valid": [
      "error",
    ],
    "jsx-a11y/click-events-have-key-events": [
      "error",
    ],
    "jsx-a11y/control-has-associated-label": [
      "off",
      {
        "ignoreElements": [
          "audio",
          "canvas",
          "embed",
          "input",
          "textarea",
          "tr",
          "video",
        ],
        "ignoreRoles": [
          "grid",
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "row",
          "tablist",
          "toolbar",
          "tree",
          "treegrid",
        ],
        "includeRoles": [
          "alert",
          "dialog",
        ],
      },
    ],
    "jsx-a11y/heading-has-content": [
      "error",
    ],
    "jsx-a11y/html-has-lang": [
      "error",
    ],
    "jsx-a11y/iframe-has-title": [
      "error",
    ],
    "jsx-a11y/img-redundant-alt": [
      "error",
    ],
    "jsx-a11y/interactive-supports-focus": [
      "error",
      {
        "tabbable": [
          "button",
          "checkbox",
          "link",
          "searchbox",
          "spinbutton",
          "switch",
          "textbox",
        ],
      },
    ],
    "jsx-a11y/label-has-associated-control": [
      "error",
    ],
    "jsx-a11y/label-has-for": [
      "off",
    ],
    "jsx-a11y/media-has-caption": [
      "error",
    ],
    "jsx-a11y/mouse-events-have-key-events": [
      "error",
    ],
    "jsx-a11y/no-access-key": [
      "error",
    ],
    "jsx-a11y/no-autofocus": [
      "error",
    ],
    "jsx-a11y/no-distracting-elements": [
      "error",
    ],
    "jsx-a11y/no-interactive-element-to-noninteractive-role": [
      "error",
      {
        "tr": [
          "none",
          "presentation",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-element-interactions": [
      "error",
      {
        "alert": [
          "onKeyUp",
          "onKeyDown",
          "onKeyPress",
        ],
        "body": [
          "onError",
          "onLoad",
        ],
        "dialog": [
          "onKeyUp",
          "onKeyDown",
          "onKeyPress",
        ],
        "handlers": [
          "onClick",
          "onError",
          "onLoad",
          "onMouseDown",
          "onMouseUp",
          "onKeyPress",
          "onKeyDown",
          "onKeyUp",
        ],
        "iframe": [
          "onError",
          "onLoad",
        ],
        "img": [
          "onError",
          "onLoad",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-element-to-interactive-role": [
      "error",
      {
        "li": [
          "menuitem",
          "option",
          "row",
          "tab",
          "treeitem",
        ],
        "ol": [
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "tablist",
          "tree",
          "treegrid",
        ],
        "table": [
          "grid",
        ],
        "td": [
          "gridcell",
        ],
        "ul": [
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "tablist",
          "tree",
          "treegrid",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-tabindex": [
      "error",
      {
        "allowExpressionValues": true,
        "roles": [
          "tabpanel",
        ],
      },
    ],
    "jsx-a11y/no-onchange": [
      "error",
    ],
    "jsx-a11y/no-redundant-roles": [
      "error",
    ],
    "jsx-a11y/no-static-element-interactions": [
      "error",
      {
        "allowExpressionValues": true,
        "handlers": [
          "onClick",
          "onMouseDown",
          "onMouseUp",
          "onKeyPress",
          "onKeyDown",
          "onKeyUp",
        ],
      },
    ],
    "jsx-a11y/role-has-required-aria-props": [
      "error",
    ],
    "jsx-a11y/role-supports-aria-props": [
      "error",
    ],
    "jsx-a11y/scope": [
      "error",
    ],
    "jsx-a11y/tabindex-no-positive": [
      "error",
    ],
    "jsx-quotes": [
      "off",
      "prefer-single",
    ],
    "key-spacing": [
      "off",
      {
        "afterColon": true,
        "beforeColon": false,
      },
    ],
    "keyword-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "linebreak-style": [
      "off",
    ],
    "lines-around-comment": [
      0,
    ],
    "lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "max-len": [
      0,
    ],
    "multiline-ternary": [
      "off",
      "always-multiline",
    ],
    "n/handle-callback-err": [
      "error",
      "^(err|error)$",
    ],
    "n/no-callback-literal": [
      "error",
    ],
    "n/no-deprecated-api": [
      "error",
    ],
    "n/no-exports-assign": [
      "error",
    ],
    "n/no-new-require": [
      "error",
    ],
    "n/no-path-concat": [
      "error",
    ],
    "n/process-exit-as-throw": [
      "error",
    ],
    "new-cap": [
      "error",
      {
        "capIsNew": false,
        "newIsCap": true,
        "properties": true,
      },
    ],
    "new-parens": [
      "off",
    ],
    "newline-per-chained-call": [
      "off",
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-arrow-condition": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-caller": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-comma-dangle": [
      "off",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-confusing-arrow": [
      0,
    ],
    "no-console": [
      "error",
    ],
    "no-const-assign": [
      "off",
    ],
    "no-constant-condition": [
      "error",
      {
        "checkLoops": false,
      },
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "off",
    ],
    "no-dupe-class-members": [
      "off",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "off",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-eval": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extend-native": [
      "error",
    ],
    "no-extra-bind": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-parens": [
      "off",
      "functions",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-floating-decimal": [
      "off",
    ],
    "no-func-assign": [
      "off",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-implicit-coercion": [
      "error",
      {
        "allow": [
          "!!",
        ],
        "boolean": true,
        "disallowTemplateShorthand": false,
        "number": true,
        "string": true,
      },
    ],
    "no-implied-eval": [
      "off",
    ],
    "no-import-assign": [
      "off",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-iterator": [
      "error",
    ],
    "no-labels": [
      "error",
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-operators": [
      0,
      {
        "allowSamePrecedence": true,
        "groups": [
          [
            "==",
            "!=",
            "===",
            "!==",
            ">",
            ">=",
            "<",
            "<=",
          ],
          [
            "&&",
            "||",
          ],
          [
            "in",
            "instanceof",
          ],
        ],
      },
    ],
    "no-mixed-spaces-and-tabs": [
      "off",
    ],
    "no-multi-spaces": [
      "off",
    ],
    "no-multi-str": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "off",
      {
        "max": 1,
        "maxEOF": 0,
      },
    ],
    "no-new": [
      "error",
    ],
    "no-new-func": [
      "error",
    ],
    "no-new-object": [
      "error",
    ],
    "no-new-symbol": [
      "off",
    ],
    "no-new-wrappers": [
      "error",
    ],
    "no-obj-calls": [
      "off",
    ],
    "no-octal": [
      "error",
    ],
    "no-octal-escape": [
      "error",
    ],
    "no-proto": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "off",
      {
        "builtinGlobals": false,
      },
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-reserved-keys": [
      "off",
    ],
    "no-return-assign": [
      "error",
      "except-parens",
    ],
    "no-return-await": [
      "error",
    ],
    "no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      "error",
    ],
    "no-sequences": [
      "error",
    ],
    "no-setter-return": [
      "off",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-space-before-semi": [
      "off",
    ],
    "no-spaced-func": [
      "off",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-tabs": [
      0,
    ],
    "no-template-curly-in-string": [
      "error",
    ],
    "no-this-before-super": [
      "off",
    ],
    "no-throw-literal": [
      "error",
    ],
    "no-trailing-spaces": [
      "off",
    ],
    "no-undef": [
      "off",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      0,
    ],
    "no-unmodified-loop-condition": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      "off",
    ],
    "no-unreachable-loop": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "off",
    ],
    "no-unused-expressions": [
      "off",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "no-use-before-define": [
      "off",
      {
        "functions": false,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-call": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-constructor": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-void": [
      "error",
      {
        "allowAsStatement": true,
      },
    ],
    "no-whitespace-before-property": [
      "off",
    ],
    "no-with": [
      "error",
    ],
    "no-wrap-func": [
      "off",
    ],
    "nonblock-statement-body-position": [
      "off",
    ],
    "object-curly-newline": [
      "off",
      {
        "consistent": true,
        "multiline": true,
      },
    ],
    "object-curly-spacing": [
      "off",
      "always",
    ],
    "object-property-newline": [
      "off",
      {
        "allowAllPropertiesOnSameLine": false,
        "allowMultiplePropertiesPerLine": true,
      },
    ],
    "object-shorthand": [
      "error",
      "properties",
    ],
    "one-var": [
      "error",
      {
        "initialized": "never",
      },
    ],
    "one-var-declaration-per-line": [
      "off",
    ],
    "operator-linebreak": [
      "off",
      "after",
      {
        "overrides": {
          ":": "before",
          "?": "before",
          "|>": "before",
        },
      },
    ],
    "padded-blocks": [
      "off",
      {
        "blocks": "never",
        "classes": "never",
        "switches": "never",
      },
    ],
    "prefer-const": [
      "error",
      {
        "destructuring": "all",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-promise-reject-errors": [
      "error",
    ],
    "prefer-regex-literals": [
      "error",
      {
        "disallowRedundantWrapping": true,
      },
    ],
    "prefer-rest-params": [
      "error",
    ],
    "prefer-spread": [
      "error",
    ],
    "promise/always-return": [
      "error",
    ],
    "promise/avoid-new": [
      "off",
    ],
    "promise/catch-or-return": [
      "error",
      {
        "allowFinally": true,
      },
    ],
    "promise/no-callback-in-promise": [
      "warn",
    ],
    "promise/no-native": [
      "off",
    ],
    "promise/no-nesting": [
      "warn",
    ],
    "promise/no-new-statics": [
      "error",
    ],
    "promise/no-promise-in-callback": [
      "warn",
    ],
    "promise/no-return-in-finally": [
      "warn",
    ],
    "promise/no-return-wrap": [
      "error",
    ],
    "promise/param-names": [
      "error",
    ],
    "promise/prefer-await-to-callbacks": [
      "error",
    ],
    "promise/prefer-await-to-then": [
      "error",
    ],
    "promise/valid-params": [
      "warn",
    ],
    "quote-props": [
      "off",
      "as-needed",
    ],
    "quotes": [
      0,
      "single",
      {
        "allowTemplateLiterals": false,
        "avoidEscape": true,
      },
    ],
    "react-hooks/exhaustive-deps": [
      "warn",
    ],
    "react-hooks/rules-of-hooks": [
      "error",
    ],
    "react/display-name": [
      "error",
    ],
    "react/jsx-boolean-value": [
      "error",
    ],
    "react/jsx-child-element-spacing": [
      "off",
    ],
    "react/jsx-closing-bracket-location": [
      "off",
      "tag-aligned",
    ],
    "react/jsx-closing-tag-location": [
      "off",
    ],
    "react/jsx-curly-brace-presence": [
      "error",
      {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": [
      "off",
      {
        "multiline": "consistent",
        "singleline": "consistent",
      },
    ],
    "react/jsx-curly-spacing": [
      "off",
      {
        "attributes": {
          "allowMultiline": true,
          "when": "never",
        },
        "children": {
          "allowMultiline": true,
          "when": "never",
        },
      },
    ],
    "react/jsx-equals-spacing": [
      "off",
      "never",
    ],
    "react/jsx-first-prop-new-line": [
      "off",
      "multiline-multiprop",
    ],
    "react/jsx-fragments": [
      "error",
      "syntax",
    ],
    "react/jsx-handler-names": [
      "error",
    ],
    "react/jsx-indent": [
      "off",
      2,
      {
        "checkAttributes": false,
        "indentLogicalExpressions": true,
      },
    ],
    "react/jsx-indent-props": [
      "off",
      2,
    ],
    "react/jsx-key": [
      "error",
      {
        "checkFragmentShorthand": true,
        "checkKeyMustBeforeSpread": false,
        "warnOnDuplicates": false,
      },
    ],
    "react/jsx-max-props-per-line": [
      "off",
    ],
    "react/jsx-newline": [
      "off",
    ],
    "react/jsx-no-comment-textnodes": [
      "error",
    ],
    "react/jsx-no-duplicate-props": [
      "error",
    ],
    "react/jsx-no-target-blank": [
      "error",
      {
        "enforceDynamicLinks": "always",
        "forms": false,
        "links": true,
      },
    ],
    "react/jsx-no-undef": [
      "error",
      {
        "allowGlobals": true,
      },
    ],
    "react/jsx-no-useless-fragment": [
      "error",
      {
        "allowExpressions": true,
      },
    ],
    "react/jsx-one-expression-per-line": [
      "off",
    ],
    "react/jsx-pascal-case": [
      "error",
      {
        "allowAllCaps": false,
      },
    ],
    "react/jsx-props-no-multi-spaces": [
      "off",
    ],
    "react/jsx-space-before-closing": [
      "off",
    ],
    "react/jsx-tag-spacing": [
      "off",
      {
        "afterOpening": "never",
        "beforeClosing": "never",
        "beforeSelfClosing": "always",
        "closingSlash": "never",
      },
    ],
    "react/jsx-uses-react": [
      0,
    ],
    "react/jsx-uses-vars": [
      "error",
    ],
    "react/jsx-wrap-multilines": [
      "off",
      {
        "arrow": "ignore",
        "assignment": "parens-new-line",
        "condition": "ignore",
        "declaration": "parens-new-line",
        "logical": "ignore",
        "prop": "ignore",
        "return": "parens-new-line",
      },
    ],
    "react/no-children-prop": [
      "error",
    ],
    "react/no-danger-with-children": [
      "error",
    ],
    "react/no-deprecated": [
      "error",
    ],
    "react/no-direct-mutation-state": [
      "error",
    ],
    "react/no-find-dom-node": [
      "error",
    ],
    "react/no-is-mounted": [
      "error",
    ],
    "react/no-render-return-value": [
      "error",
    ],
    "react/no-string-refs": [
      "error",
      {
        "noTemplateLiterals": true,
      },
    ],
    "react/no-unescaped-entities": [
      "error",
      {
        "forbid": [
          ">",
          "}",
        ],
      },
    ],
    "react/no-unknown-property": [
      2,
    ],
    "react/no-unsafe": [
      0,
    ],
    "react/prop-types": [
      0,
    ],
    "react/react-in-jsx-scope": [
      0,
    ],
    "react/require-render-return": [
      "error",
    ],
    "react/self-closing-comp": [
      "error",
      {
        "component": true,
        "html": true,
      },
    ],
    "require-atomic-updates": [
      "off",
    ],
    "require-await": [
      "off",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "off",
      "never",
    ],
    "semi": [
      "off",
      "never",
    ],
    "semi-spacing": [
      "off",
      {
        "after": true,
        "before": false,
      },
    ],
    "semi-style": [
      "off",
    ],
    "space-after-function-name": [
      "off",
    ],
    "space-after-keywords": [
      "off",
    ],
    "space-before-blocks": [
      "off",
      "always",
    ],
    "space-before-function-paren": [
      "off",
      "always",
    ],
    "space-before-function-parentheses": [
      "off",
    ],
    "space-before-keywords": [
      "off",
    ],
    "space-in-brackets": [
      "off",
    ],
    "space-in-parens": [
      "off",
      "never",
    ],
    "space-infix-ops": [
      "off",
    ],
    "space-return-throw-case": [
      "off",
    ],
    "space-unary-ops": [
      "off",
      {
        "nonwords": false,
        "words": true,
      },
    ],
    "space-unary-word-ops": [
      "off",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "*",
          ],
          "markers": [
            "*package",
            "!",
            ",",
            ":",
            "::",
            "flow-include",
          ],
        },
        "line": {
          "markers": [
            "*package",
            "!",
            "/",
            ",",
            "=",
          ],
        },
      },
    ],
    "standard/array-bracket-even-spacing": [
      "off",
    ],
    "standard/computed-property-even-spacing": [
      "off",
    ],
    "standard/object-curly-even-spacing": [
      "off",
    ],
    "switch-colon-spacing": [
      "off",
    ],
    "symbol-description": [
      "error",
    ],
    "template-curly-spacing": [
      "off",
      "never",
    ],
    "template-tag-spacing": [
      "off",
      "never",
    ],
    "unicode-bom": [
      "off",
      "never",
    ],
    "unicorn/empty-brace-spaces": [
      "off",
    ],
    "unicorn/no-nested-ternary": [
      "off",
    ],
    "unicorn/number-literal-case": [
      "off",
    ],
    "use-isnan": [
      "error",
      {
        "enforceForIndexOf": true,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      "off",
      {
        "requireStringLiterals": true,
      },
    ],
    "vue/array-bracket-newline": [
      "off",
    ],
    "vue/array-bracket-spacing": [
      "off",
    ],
    "vue/arrow-spacing": [
      "off",
    ],
    "vue/block-spacing": [
      "off",
    ],
    "vue/block-tag-newline": [
      "off",
    ],
    "vue/brace-style": [
      "off",
    ],
    "vue/comma-dangle": [
      "off",
    ],
    "vue/comma-spacing": [
      "off",
    ],
    "vue/comma-style": [
      "off",
    ],
    "vue/dot-location": [
      "off",
    ],
    "vue/func-call-spacing": [
      "off",
    ],
    "vue/html-closing-bracket-newline": [
      "off",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "off",
    ],
    "vue/html-indent": [
      "off",
    ],
    "vue/html-quotes": [
      "off",
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      "off",
    ],
    "vue/keyword-spacing": [
      "off",
    ],
    "vue/max-attributes-per-line": [
      "off",
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      "off",
    ],
    "vue/multiline-ternary": [
      "off",
    ],
    "vue/mustache-interpolation-spacing": [
      "off",
    ],
    "vue/no-extra-parens": [
      "off",
    ],
    "vue/no-multi-spaces": [
      "off",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "off",
    ],
    "vue/object-curly-newline": [
      "off",
    ],
    "vue/object-curly-spacing": [
      "off",
    ],
    "vue/object-property-newline": [
      "off",
    ],
    "vue/operator-linebreak": [
      "off",
    ],
    "vue/quote-props": [
      "off",
    ],
    "vue/script-indent": [
      "off",
    ],
    "vue/singleline-html-element-content-newline": [
      "off",
    ],
    "vue/space-in-parens": [
      "off",
    ],
    "vue/space-infix-ops": [
      "off",
    ],
    "vue/space-unary-ops": [
      "off",
    ],
    "vue/template-curly-spacing": [
      "off",
    ],
    "wrap-iife": [
      "off",
      "any",
      {
        "functionPrototypeMethods": true,
      },
    ],
    "wrap-regex": [
      "off",
    ],
    "yield-star-spacing": [
      "off",
      "both",
    ],
    "yoda": [
      "error",
      "never",
    ],
  },
  "settings": {
    "import/extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
    ],
    "import/external-module-folders": [
      "node_modules",
      "node_modules/@types",
    ],
    "import/parsers": {
      "@typescript-eslint/parser": [
        ".ts",
        ".tsx",
      ],
    },
    "import/resolver": {
      "node": {
        "extensions": [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
        ],
      },
      "typescript": {
        "alwaysTryTypes": true,
        "project": "./tsconfig.json",
      },
    },
    "linkComponents": [
      "Link",
    ],
    "react": {
      "version": "detect",
    },
  },
}
`;

exports[`eslint createConfig javascript 1`] = `
{
  "env": {
    "es2021": true,
    "node": true,
  },
  "globals": {
    "document": "readonly",
    "navigator": "readonly",
    "window": "readonly",
  },
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaFeatures": {
      "jsx": true,
    },
    "ecmaVersion": 2022,
    "sourceType": "module",
  },
  "plugins": [
    "promise",
    "n",
    "import",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@babel/object-curly-spacing": [
      "off",
    ],
    "@babel/semi": [
      "off",
    ],
    "@typescript-eslint/brace-style": [
      "off",
    ],
    "@typescript-eslint/comma-dangle": [
      "off",
    ],
    "@typescript-eslint/comma-spacing": [
      "off",
    ],
    "@typescript-eslint/func-call-spacing": [
      "off",
    ],
    "@typescript-eslint/indent": [
      "off",
    ],
    "@typescript-eslint/keyword-spacing": [
      "off",
    ],
    "@typescript-eslint/member-delimiter-style": [
      "off",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "off",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "off",
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/semi": [
      "off",
    ],
    "@typescript-eslint/space-before-blocks": [
      "off",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "off",
    ],
    "@typescript-eslint/space-infix-ops": [
      "off",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "off",
    ],
    "accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
        "getWithoutSet": false,
        "setWithoutGet": true,
      },
    ],
    "array-bracket-newline": [
      "off",
    ],
    "array-bracket-spacing": [
      "off",
      "never",
    ],
    "array-callback-return": [
      "error",
      {
        "allowImplicit": false,
        "checkForEach": false,
      },
    ],
    "array-element-newline": [
      "off",
    ],
    "arrow-parens": [
      "off",
    ],
    "arrow-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "babel/object-curly-spacing": [
      "off",
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      "off",
    ],
    "block-spacing": [
      "off",
      "always",
    ],
    "brace-style": [
      "off",
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "camelcase": [
      "error",
      {
        "ignoreDestructuring": false,
        "ignoreGlobals": false,
        "ignoreImports": false,
        "properties": "always",
      },
    ],
    "comma-dangle": [
      "off",
      {
        "arrays": "never",
        "exports": "never",
        "functions": "never",
        "imports": "never",
        "objects": "never",
      },
    ],
    "comma-spacing": [
      "off",
      {
        "after": true,
        "before": false,
      },
    ],
    "comma-style": [
      "off",
      "last",
    ],
    "computed-property-spacing": [
      "off",
      "never",
      {
        "enforceForClassMembers": true,
      },
    ],
    "constructor-super": [
      "error",
    ],
    "curly": [
      "error",
      "all",
    ],
    "default-case-last": [
      "error",
    ],
    "dot-location": [
      "off",
      "property",
    ],
    "dot-notation": [
      "error",
      {
        "allowKeywords": true,
        "allowPattern": "",
      },
    ],
    "eol-last": [
      "off",
    ],
    "eqeqeq": [
      "error",
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      "off",
    ],
    "flowtype/delimiter-dangle": [
      "off",
    ],
    "flowtype/generic-spacing": [
      "off",
    ],
    "flowtype/object-type-curly-spacing": [
      "off",
    ],
    "flowtype/object-type-delimiter": [
      "off",
    ],
    "flowtype/quotes": [
      "off",
    ],
    "flowtype/semi": [
      "off",
    ],
    "flowtype/space-after-type-colon": [
      "off",
    ],
    "flowtype/space-before-generic-bracket": [
      "off",
    ],
    "flowtype/space-before-type-colon": [
      "off",
    ],
    "flowtype/union-intersection-spacing": [
      "off",
    ],
    "for-direction": [
      "error",
    ],
    "func-call-spacing": [
      "off",
      "never",
    ],
    "func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "function-call-argument-newline": [
      "off",
    ],
    "function-paren-newline": [
      "off",
    ],
    "generator-star": [
      "off",
    ],
    "generator-star-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "getter-return": [
      "error",
    ],
    "implicit-arrow-linebreak": [
      "off",
    ],
    "import/default": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/first": [
      "error",
    ],
    "import/named": [
      "error",
    ],
    "import/namespace": [
      "error",
    ],
    "import/newline-after-import": [
      "error",
    ],
    "import/no-absolute-path": [
      "error",
      {
        "amd": false,
        "commonjs": true,
        "esmodule": true,
      },
    ],
    "import/no-duplicates": [
      "error",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "warn",
    ],
    "import/no-named-default": [
      "error",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/no-webpack-loader-syntax": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "distinctGroup": true,
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "parent",
            "pattern": "@/**",
            "position": "before",
          },
        ],
        "pathGroupsExcludedImportTypes": [
          "builtin",
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "indent": [
      "off",
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "MemberExpression": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "TemplateLiteral *",
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "offsetTernaryExpressions": true,
        "outerIIFEBody": 1,
      },
    ],
    "indent-legacy": [
      "off",
    ],
    "jsx-quotes": [
      "off",
    ],
    "key-spacing": [
      "off",
      {
        "afterColon": true,
        "beforeColon": false,
      },
    ],
    "keyword-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "linebreak-style": [
      "off",
    ],
    "lines-around-comment": [
      0,
    ],
    "lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "max-len": [
      0,
    ],
    "multiline-ternary": [
      "off",
      "always-multiline",
    ],
    "n/handle-callback-err": [
      "error",
      "^(err|error)$",
    ],
    "n/no-callback-literal": [
      "error",
    ],
    "n/no-deprecated-api": [
      "error",
    ],
    "n/no-exports-assign": [
      "error",
    ],
    "n/no-new-require": [
      "error",
    ],
    "n/no-path-concat": [
      "error",
    ],
    "n/process-exit-as-throw": [
      "error",
    ],
    "new-cap": [
      "error",
      {
        "capIsNew": false,
        "newIsCap": true,
        "properties": true,
      },
    ],
    "new-parens": [
      "off",
    ],
    "newline-per-chained-call": [
      "off",
    ],
    "no-array-constructor": [
      "error",
    ],
    "no-arrow-condition": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-caller": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-comma-dangle": [
      "off",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-confusing-arrow": [
      0,
    ],
    "no-console": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
      {
        "checkLoops": false,
      },
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-eval": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extend-native": [
      "error",
    ],
    "no-extra-bind": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-parens": [
      "off",
      "functions",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-floating-decimal": [
      "off",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-implicit-coercion": [
      "error",
      {
        "allow": [
          "!!",
        ],
        "boolean": true,
        "disallowTemplateShorthand": false,
        "number": true,
        "string": true,
      },
    ],
    "no-implied-eval": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-iterator": [
      "error",
    ],
    "no-labels": [
      "error",
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      "error",
    ],
    "no-loss-of-precision": [
      "error",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-operators": [
      0,
      {
        "allowSamePrecedence": true,
        "groups": [
          [
            "==",
            "!=",
            "===",
            "!==",
            ">",
            ">=",
            "<",
            "<=",
          ],
          [
            "&&",
            "||",
          ],
          [
            "in",
            "instanceof",
          ],
        ],
      },
    ],
    "no-mixed-spaces-and-tabs": [
      "off",
    ],
    "no-multi-spaces": [
      "off",
    ],
    "no-multi-str": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "off",
      {
        "max": 1,
        "maxEOF": 0,
      },
    ],
    "no-new": [
      "error",
    ],
    "no-new-func": [
      "error",
    ],
    "no-new-object": [
      "error",
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-new-wrappers": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-octal-escape": [
      "error",
    ],
    "no-proto": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
      {
        "builtinGlobals": false,
      },
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-reserved-keys": [
      "off",
    ],
    "no-return-assign": [
      "error",
      "except-parens",
    ],
    "no-return-await": [
      "error",
    ],
    "no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      "error",
    ],
    "no-sequences": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-space-before-semi": [
      "off",
    ],
    "no-spaced-func": [
      "off",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-tabs": [
      0,
    ],
    "no-template-curly-in-string": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-throw-literal": [
      "error",
    ],
    "no-trailing-spaces": [
      "off",
    ],
    "no-undef": [
      "error",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      0,
    ],
    "no-unmodified-loop-condition": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unreachable-loop": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unused-expressions": [
      "error",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "error",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "no-use-before-define": [
      "error",
      {
        "functions": false,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-call": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-constructor": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "warn",
    ],
    "no-void": [
      "error",
      {
        "allowAsStatement": true,
      },
    ],
    "no-whitespace-before-property": [
      "off",
    ],
    "no-with": [
      "error",
    ],
    "no-wrap-func": [
      "off",
    ],
    "nonblock-statement-body-position": [
      "off",
    ],
    "object-curly-newline": [
      "off",
      {
        "consistent": true,
        "multiline": true,
      },
    ],
    "object-curly-spacing": [
      "off",
      "always",
    ],
    "object-property-newline": [
      "off",
      {
        "allowAllPropertiesOnSameLine": false,
        "allowMultiplePropertiesPerLine": true,
      },
    ],
    "object-shorthand": [
      "error",
      "properties",
    ],
    "one-var": [
      "error",
      {
        "initialized": "never",
      },
    ],
    "one-var-declaration-per-line": [
      "off",
    ],
    "operator-linebreak": [
      "off",
      "after",
      {
        "overrides": {
          ":": "before",
          "?": "before",
          "|>": "before",
        },
      },
    ],
    "padded-blocks": [
      "off",
      {
        "blocks": "never",
        "classes": "never",
        "switches": "never",
      },
    ],
    "prefer-const": [
      "error",
      {
        "destructuring": "all",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-promise-reject-errors": [
      "error",
    ],
    "prefer-regex-literals": [
      "error",
      {
        "disallowRedundantWrapping": true,
      },
    ],
    "promise/always-return": [
      "error",
    ],
    "promise/avoid-new": [
      "off",
    ],
    "promise/catch-or-return": [
      "error",
      {
        "allowFinally": true,
      },
    ],
    "promise/no-callback-in-promise": [
      "warn",
    ],
    "promise/no-native": [
      "off",
    ],
    "promise/no-nesting": [
      "warn",
    ],
    "promise/no-new-statics": [
      "error",
    ],
    "promise/no-promise-in-callback": [
      "warn",
    ],
    "promise/no-return-in-finally": [
      "warn",
    ],
    "promise/no-return-wrap": [
      "error",
    ],
    "promise/param-names": [
      "error",
    ],
    "promise/prefer-await-to-callbacks": [
      "error",
    ],
    "promise/prefer-await-to-then": [
      "error",
    ],
    "promise/valid-params": [
      "warn",
    ],
    "quote-props": [
      "off",
      "as-needed",
    ],
    "quotes": [
      0,
      "single",
      {
        "allowTemplateLiterals": false,
        "avoidEscape": true,
      },
    ],
    "react/jsx-child-element-spacing": [
      "off",
    ],
    "react/jsx-closing-bracket-location": [
      "off",
    ],
    "react/jsx-closing-tag-location": [
      "off",
    ],
    "react/jsx-curly-newline": [
      "off",
    ],
    "react/jsx-curly-spacing": [
      "off",
    ],
    "react/jsx-equals-spacing": [
      "off",
    ],
    "react/jsx-first-prop-new-line": [
      "off",
    ],
    "react/jsx-indent": [
      "off",
    ],
    "react/jsx-indent-props": [
      "off",
    ],
    "react/jsx-max-props-per-line": [
      "off",
    ],
    "react/jsx-newline": [
      "off",
    ],
    "react/jsx-one-expression-per-line": [
      "off",
    ],
    "react/jsx-props-no-multi-spaces": [
      "off",
    ],
    "react/jsx-space-before-closing": [
      "off",
    ],
    "react/jsx-tag-spacing": [
      "off",
    ],
    "react/jsx-wrap-multilines": [
      "off",
    ],
    "require-atomic-updates": [
      "off",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "off",
      "never",
    ],
    "semi": [
      "off",
      "never",
    ],
    "semi-spacing": [
      "off",
      {
        "after": true,
        "before": false,
      },
    ],
    "semi-style": [
      "off",
    ],
    "space-after-function-name": [
      "off",
    ],
    "space-after-keywords": [
      "off",
    ],
    "space-before-blocks": [
      "off",
      "always",
    ],
    "space-before-function-paren": [
      "off",
      "always",
    ],
    "space-before-function-parentheses": [
      "off",
    ],
    "space-before-keywords": [
      "off",
    ],
    "space-in-brackets": [
      "off",
    ],
    "space-in-parens": [
      "off",
      "never",
    ],
    "space-infix-ops": [
      "off",
    ],
    "space-return-throw-case": [
      "off",
    ],
    "space-unary-ops": [
      "off",
      {
        "nonwords": false,
        "words": true,
      },
    ],
    "space-unary-word-ops": [
      "off",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "*",
          ],
          "markers": [
            "*package",
            "!",
            ",",
            ":",
            "::",
            "flow-include",
          ],
        },
        "line": {
          "markers": [
            "*package",
            "!",
            "/",
            ",",
            "=",
          ],
        },
      },
    ],
    "standard/array-bracket-even-spacing": [
      "off",
    ],
    "standard/computed-property-even-spacing": [
      "off",
    ],
    "standard/object-curly-even-spacing": [
      "off",
    ],
    "switch-colon-spacing": [
      "off",
    ],
    "symbol-description": [
      "error",
    ],
    "template-curly-spacing": [
      "off",
      "never",
    ],
    "template-tag-spacing": [
      "off",
      "never",
    ],
    "unicode-bom": [
      "off",
      "never",
    ],
    "unicorn/empty-brace-spaces": [
      "off",
    ],
    "unicorn/no-nested-ternary": [
      "off",
    ],
    "unicorn/number-literal-case": [
      "off",
    ],
    "use-isnan": [
      "error",
      {
        "enforceForIndexOf": true,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      "error",
      {
        "requireStringLiterals": true,
      },
    ],
    "vue/array-bracket-newline": [
      "off",
    ],
    "vue/array-bracket-spacing": [
      "off",
    ],
    "vue/arrow-spacing": [
      "off",
    ],
    "vue/block-spacing": [
      "off",
    ],
    "vue/block-tag-newline": [
      "off",
    ],
    "vue/brace-style": [
      "off",
    ],
    "vue/comma-dangle": [
      "off",
    ],
    "vue/comma-spacing": [
      "off",
    ],
    "vue/comma-style": [
      "off",
    ],
    "vue/dot-location": [
      "off",
    ],
    "vue/func-call-spacing": [
      "off",
    ],
    "vue/html-closing-bracket-newline": [
      "off",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "off",
    ],
    "vue/html-indent": [
      "off",
    ],
    "vue/html-quotes": [
      "off",
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      "off",
    ],
    "vue/keyword-spacing": [
      "off",
    ],
    "vue/max-attributes-per-line": [
      "off",
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      "off",
    ],
    "vue/multiline-ternary": [
      "off",
    ],
    "vue/mustache-interpolation-spacing": [
      "off",
    ],
    "vue/no-extra-parens": [
      "off",
    ],
    "vue/no-multi-spaces": [
      "off",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "off",
    ],
    "vue/object-curly-newline": [
      "off",
    ],
    "vue/object-curly-spacing": [
      "off",
    ],
    "vue/object-property-newline": [
      "off",
    ],
    "vue/operator-linebreak": [
      "off",
    ],
    "vue/quote-props": [
      "off",
    ],
    "vue/script-indent": [
      "off",
    ],
    "vue/singleline-html-element-content-newline": [
      "off",
    ],
    "vue/space-in-parens": [
      "off",
    ],
    "vue/space-infix-ops": [
      "off",
    ],
    "vue/space-unary-ops": [
      "off",
    ],
    "vue/template-curly-spacing": [
      "off",
    ],
    "wrap-iife": [
      "off",
      "any",
      {
        "functionPrototypeMethods": true,
      },
    ],
    "wrap-regex": [
      "off",
    ],
    "yield-star-spacing": [
      "off",
      "both",
    ],
    "yoda": [
      "error",
      "never",
    ],
  },
  "settings": {
    "import/resolver": {
      "node": {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
      },
    },
  },
}
`;

exports[`eslint createConfig typescript 1`] = `
{
  "env": {
    "es2021": true,
    "node": true,
  },
  "globals": {
    "document": "readonly",
    "navigator": "readonly",
    "window": "readonly",
  },
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": StringMatching /@typescript-eslint/,
  "parserOptions": {
    "ecmaFeatures": {
      "jsx": true,
    },
    "ecmaVersion": 2022,
    "project": "./tsconfig.json",
    "sourceType": "module",
    "tsconfigRootDir": "~/mock-dir-name",
  },
  "plugins": [
    "promise",
    "n",
    "import",
    "@typescript-eslint",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@babel/object-curly-spacing": [
      "off",
    ],
    "@babel/semi": [
      "off",
    ],
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/await-thenable": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "error",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/brace-style": [
      "off",
    ],
    "@typescript-eslint/comma-dangle": [
      "off",
    ],
    "@typescript-eslint/comma-spacing": [
      "off",
    ],
    "@typescript-eslint/consistent-type-assertions": [
      "error",
    ],
    "@typescript-eslint/consistent-type-definitions": [
      "error",
      "interface",
    ],
    "@typescript-eslint/explicit-member-accessibility": [
      "error",
    ],
    "@typescript-eslint/func-call-spacing": [
      "off",
    ],
    "@typescript-eslint/indent": [
      "off",
    ],
    "@typescript-eslint/keyword-spacing": [
      "off",
    ],
    "@typescript-eslint/member-delimiter-style": [
      "off",
    ],
    "@typescript-eslint/naming-convention": [
      "error",
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "StrictPascalCase",
          "UPPER_CASE",
        ],
        "leadingUnderscore": "allow",
        "selector": "default",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "StrictPascalCase",
        ],
        "selector": "typeLike",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
        ],
        "selector": "memberLike",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "StrictPascalCase",
        ],
        "selector": "enumMember",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
        ],
        "selector": "function",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "UPPER_CASE",
        ],
        "selector": "variable",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "UPPER_CASE",
        ],
        "leadingUnderscore": "allow",
        "modifiers": [
          "unused",
        ],
        "selector": "variable",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
        ],
        "selector": "parameter",
      },
      {
        "filter": {
          "match": false,
          "regex": "^(__html|Provider|Consumer|Component|_triple_mock_value)$",
        },
        "format": [
          "strictCamelCase",
          "PascalCase",
        ],
        "leadingUnderscore": "allow",
        "modifiers": [
          "unused",
        ],
        "selector": "parameter",
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-empty-function": [
      "off",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "error",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "off",
    ],
    "@typescript-eslint/no-floating-promises": [
      "error",
    ],
    "@typescript-eslint/no-for-in-array": [
      "error",
    ],
    "@typescript-eslint/no-implied-eval": [
      "error",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-misused-promises": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-argument": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-call": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-return": [
      "error",
    ],
    "@typescript-eslint/no-unused-expressions": [
      "error",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      "error",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "@typescript-eslint/no-use-before-define": [
      "error",
      {
        "functions": false,
      },
    ],
    "@typescript-eslint/no-var-requires": [
      "off",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "off",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/require-await": [
      "error",
    ],
    "@typescript-eslint/restrict-plus-operands": [
      "error",
    ],
    "@typescript-eslint/restrict-template-expressions": [
      "error",
    ],
    "@typescript-eslint/semi": [
      "off",
    ],
    "@typescript-eslint/space-before-blocks": [
      "off",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "off",
    ],
    "@typescript-eslint/space-infix-ops": [
      "off",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "off",
    ],
    "@typescript-eslint/unbound-method": [
      "error",
    ],
    "accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
        "getWithoutSet": false,
        "setWithoutGet": true,
      },
    ],
    "array-bracket-newline": [
      "off",
    ],
    "array-bracket-spacing": [
      "off",
      "never",
    ],
    "array-callback-return": [
      "error",
      {
        "allowImplicit": false,
        "checkForEach": false,
      },
    ],
    "array-element-newline": [
      "off",
    ],
    "arrow-parens": [
      "off",
    ],
    "arrow-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "babel/object-curly-spacing": [
      "off",
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      "off",
    ],
    "block-spacing": [
      "off",
      "always",
    ],
    "brace-style": [
      "off",
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "camelcase": [
      "off",
      {
        "ignoreDestructuring": false,
        "ignoreGlobals": false,
        "ignoreImports": false,
        "properties": "always",
      },
    ],
    "comma-dangle": [
      "off",
      {
        "arrays": "never",
        "exports": "never",
        "functions": "never",
        "imports": "never",
        "objects": "never",
      },
    ],
    "comma-spacing": [
      "off",
      {
        "after": true,
        "before": false,
      },
    ],
    "comma-style": [
      "off",
      "last",
    ],
    "computed-property-spacing": [
      "off",
      "never",
      {
        "enforceForClassMembers": true,
      },
    ],
    "constructor-super": [
      "off",
    ],
    "curly": [
      "error",
      "all",
    ],
    "default-case-last": [
      "error",
    ],
    "dot-location": [
      "off",
      "property",
    ],
    "dot-notation": [
      "error",
      {
        "allowKeywords": true,
        "allowPattern": "",
      },
    ],
    "eol-last": [
      "off",
    ],
    "eqeqeq": [
      "error",
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      "off",
    ],
    "flowtype/delimiter-dangle": [
      "off",
    ],
    "flowtype/generic-spacing": [
      "off",
    ],
    "flowtype/object-type-curly-spacing": [
      "off",
    ],
    "flowtype/object-type-delimiter": [
      "off",
    ],
    "flowtype/quotes": [
      "off",
    ],
    "flowtype/semi": [
      "off",
    ],
    "flowtype/space-after-type-colon": [
      "off",
    ],
    "flowtype/space-before-generic-bracket": [
      "off",
    ],
    "flowtype/space-before-type-colon": [
      "off",
    ],
    "flowtype/union-intersection-spacing": [
      "off",
    ],
    "for-direction": [
      "error",
    ],
    "func-call-spacing": [
      "off",
      "never",
    ],
    "func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "function-call-argument-newline": [
      "off",
    ],
    "function-paren-newline": [
      "off",
    ],
    "generator-star": [
      "off",
    ],
    "generator-star-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "getter-return": [
      "off",
    ],
    "implicit-arrow-linebreak": [
      "off",
    ],
    "import/default": [
      "off",
    ],
    "import/export": [
      "error",
    ],
    "import/first": [
      "error",
    ],
    "import/named": [
      "off",
    ],
    "import/namespace": [
      "off",
    ],
    "import/newline-after-import": [
      "error",
    ],
    "import/no-absolute-path": [
      "error",
      {
        "amd": false,
        "commonjs": true,
        "esmodule": true,
      },
    ],
    "import/no-duplicates": [
      "error",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "off",
    ],
    "import/no-named-default": [
      "error",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/no-webpack-loader-syntax": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "distinctGroup": true,
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "parent",
            "pattern": "@/**",
            "position": "before",
          },
        ],
        "pathGroupsExcludedImportTypes": [
          "builtin",
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "indent": [
      "off",
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "MemberExpression": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "TemplateLiteral *",
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "offsetTernaryExpressions": true,
        "outerIIFEBody": 1,
      },
    ],
    "indent-legacy": [
      "off",
    ],
    "jsx-quotes": [
      "off",
    ],
    "key-spacing": [
      "off",
      {
        "afterColon": true,
        "beforeColon": false,
      },
    ],
    "keyword-spacing": [
      "off",
      {
        "after": true,
        "before": true,
      },
    ],
    "linebreak-style": [
      "off",
    ],
    "lines-around-comment": [
      0,
    ],
    "lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "max-len": [
      0,
    ],
    "multiline-ternary": [
      "off",
      "always-multiline",
    ],
    "n/handle-callback-err": [
      "error",
      "^(err|error)$",
    ],
    "n/no-callback-literal": [
      "error",
    ],
    "n/no-deprecated-api": [
      "error",
    ],
    "n/no-exports-assign": [
      "error",
    ],
    "n/no-new-require": [
      "error",
    ],
    "n/no-path-concat": [
      "error",
    ],
    "n/process-exit-as-throw": [
      "error",
    ],
    "new-cap": [
      "error",
      {
        "capIsNew": false,
        "newIsCap": true,
        "properties": true,
      },
    ],
    "new-parens": [
      "off",
    ],
    "newline-per-chained-call": [
      "off",
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-arrow-condition": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-caller": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-comma-dangle": [
      "off",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-confusing-arrow": [
      0,
    ],
    "no-console": [
      "error",
    ],
    "no-const-assign": [
      "off",
    ],
    "no-constant-condition": [
      "error",
      {
        "checkLoops": false,
      },
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "off",
    ],
    "no-dupe-class-members": [
      "off",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "off",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-eval": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extend-native": [
      "error",
    ],
    "no-extra-bind": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-parens": [
      "off",
      "functions",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-floating-decimal": [
      "off",
    ],
    "no-func-assign": [
      "off",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-implicit-coercion": [
      "error",
      {
        "allow": [
          "!!",
        ],
        "boolean": true,
        "disallowTemplateShorthand": false,
        "number": true,
        "string": true,
      },
    ],
    "no-implied-eval": [
      "off",
    ],
    "no-import-assign": [
      "off",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-iterator": [
      "error",
    ],
    "no-labels": [
      "error",
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-operators": [
      0,
      {
        "allowSamePrecedence": true,
        "groups": [
          [
            "==",
            "!=",
            "===",
            "!==",
            ">",
            ">=",
            "<",
            "<=",
          ],
          [
            "&&",
            "||",
          ],
          [
            "in",
            "instanceof",
          ],
        ],
      },
    ],
    "no-mixed-spaces-and-tabs": [
      "off",
    ],
    "no-multi-spaces": [
      "off",
    ],
    "no-multi-str": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "off",
      {
        "max": 1,
        "maxEOF": 0,
      },
    ],
    "no-new": [
      "error",
    ],
    "no-new-func": [
      "error",
    ],
    "no-new-object": [
      "error",
    ],
    "no-new-symbol": [
      "off",
    ],
    "no-new-wrappers": [
      "error",
    ],
    "no-obj-calls": [
      "off",
    ],
    "no-octal": [
      "error",
    ],
    "no-octal-escape": [
      "error",
    ],
    "no-proto": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "off",
      {
        "builtinGlobals": false,
      },
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-reserved-keys": [
      "off",
    ],
    "no-return-assign": [
      "error",
      "except-parens",
    ],
    "no-return-await": [
      "error",
    ],
    "no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      "error",
    ],
    "no-sequences": [
      "error",
    ],
    "no-setter-return": [
      "off",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-space-before-semi": [
      "off",
    ],
    "no-spaced-func": [
      "off",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-tabs": [
      0,
    ],
    "no-template-curly-in-string": [
      "error",
    ],
    "no-this-before-super": [
      "off",
    ],
    "no-throw-literal": [
      "error",
    ],
    "no-trailing-spaces": [
      "off",
    ],
    "no-undef": [
      "off",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      0,
    ],
    "no-unmodified-loop-condition": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      "off",
    ],
    "no-unreachable-loop": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "off",
    ],
    "no-unused-expressions": [
      "off",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "no-use-before-define": [
      "off",
      {
        "functions": false,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-call": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-constructor": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-void": [
      "error",
      {
        "allowAsStatement": true,
      },
    ],
    "no-whitespace-before-property": [
      "off",
    ],
    "no-with": [
      "error",
    ],
    "no-wrap-func": [
      "off",
    ],
    "nonblock-statement-body-position": [
      "off",
    ],
    "object-curly-newline": [
      "off",
      {
        "consistent": true,
        "multiline": true,
      },
    ],
    "object-curly-spacing": [
      "off",
      "always",
    ],
    "object-property-newline": [
      "off",
      {
        "allowAllPropertiesOnSameLine": false,
        "allowMultiplePropertiesPerLine": true,
      },
    ],
    "object-shorthand": [
      "error",
      "properties",
    ],
    "one-var": [
      "error",
      {
        "initialized": "never",
      },
    ],
    "one-var-declaration-per-line": [
      "off",
    ],
    "operator-linebreak": [
      "off",
      "after",
      {
        "overrides": {
          ":": "before",
          "?": "before",
          "|>": "before",
        },
      },
    ],
    "padded-blocks": [
      "off",
      {
        "blocks": "never",
        "classes": "never",
        "switches": "never",
      },
    ],
    "prefer-const": [
      "error",
      {
        "destructuring": "all",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-promise-reject-errors": [
      "error",
    ],
    "prefer-regex-literals": [
      "error",
      {
        "disallowRedundantWrapping": true,
      },
    ],
    "prefer-rest-params": [
      "error",
    ],
    "prefer-spread": [
      "error",
    ],
    "promise/always-return": [
      "error",
    ],
    "promise/avoid-new": [
      "off",
    ],
    "promise/catch-or-return": [
      "error",
      {
        "allowFinally": true,
      },
    ],
    "promise/no-callback-in-promise": [
      "warn",
    ],
    "promise/no-native": [
      "off",
    ],
    "promise/no-nesting": [
      "warn",
    ],
    "promise/no-new-statics": [
      "error",
    ],
    "promise/no-promise-in-callback": [
      "warn",
    ],
    "promise/no-return-in-finally": [
      "warn",
    ],
    "promise/no-return-wrap": [
      "error",
    ],
    "promise/param-names": [
      "error",
    ],
    "promise/prefer-await-to-callbacks": [
      "error",
    ],
    "promise/prefer-await-to-then": [
      "error",
    ],
    "promise/valid-params": [
      "warn",
    ],
    "quote-props": [
      "off",
      "as-needed",
    ],
    "quotes": [
      0,
      "single",
      {
        "allowTemplateLiterals": false,
        "avoidEscape": true,
      },
    ],
    "react/jsx-child-element-spacing": [
      "off",
    ],
    "react/jsx-closing-bracket-location": [
      "off",
    ],
    "react/jsx-closing-tag-location": [
      "off",
    ],
    "react/jsx-curly-newline": [
      "off",
    ],
    "react/jsx-curly-spacing": [
      "off",
    ],
    "react/jsx-equals-spacing": [
      "off",
    ],
    "react/jsx-first-prop-new-line": [
      "off",
    ],
    "react/jsx-indent": [
      "off",
    ],
    "react/jsx-indent-props": [
      "off",
    ],
    "react/jsx-max-props-per-line": [
      "off",
    ],
    "react/jsx-newline": [
      "off",
    ],
    "react/jsx-one-expression-per-line": [
      "off",
    ],
    "react/jsx-props-no-multi-spaces": [
      "off",
    ],
    "react/jsx-space-before-closing": [
      "off",
    ],
    "react/jsx-tag-spacing": [
      "off",
    ],
    "react/jsx-wrap-multilines": [
      "off",
    ],
    "require-atomic-updates": [
      "off",
    ],
    "require-await": [
      "off",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "off",
      "never",
    ],
    "semi": [
      "off",
      "never",
    ],
    "semi-spacing": [
      "off",
      {
        "after": true,
        "before": false,
      },
    ],
    "semi-style": [
      "off",
    ],
    "space-after-function-name": [
      "off",
    ],
    "space-after-keywords": [
      "off",
    ],
    "space-before-blocks": [
      "off",
      "always",
    ],
    "space-before-function-paren": [
      "off",
      "always",
    ],
    "space-before-function-parentheses": [
      "off",
    ],
    "space-before-keywords": [
      "off",
    ],
    "space-in-brackets": [
      "off",
    ],
    "space-in-parens": [
      "off",
      "never",
    ],
    "space-infix-ops": [
      "off",
    ],
    "space-return-throw-case": [
      "off",
    ],
    "space-unary-ops": [
      "off",
      {
        "nonwords": false,
        "words": true,
      },
    ],
    "space-unary-word-ops": [
      "off",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "*",
          ],
          "markers": [
            "*package",
            "!",
            ",",
            ":",
            "::",
            "flow-include",
          ],
        },
        "line": {
          "markers": [
            "*package",
            "!",
            "/",
            ",",
            "=",
          ],
        },
      },
    ],
    "standard/array-bracket-even-spacing": [
      "off",
    ],
    "standard/computed-property-even-spacing": [
      "off",
    ],
    "standard/object-curly-even-spacing": [
      "off",
    ],
    "switch-colon-spacing": [
      "off",
    ],
    "symbol-description": [
      "error",
    ],
    "template-curly-spacing": [
      "off",
      "never",
    ],
    "template-tag-spacing": [
      "off",
      "never",
    ],
    "unicode-bom": [
      "off",
      "never",
    ],
    "unicorn/empty-brace-spaces": [
      "off",
    ],
    "unicorn/no-nested-ternary": [
      "off",
    ],
    "unicorn/number-literal-case": [
      "off",
    ],
    "use-isnan": [
      "error",
      {
        "enforceForIndexOf": true,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      "off",
      {
        "requireStringLiterals": true,
      },
    ],
    "vue/array-bracket-newline": [
      "off",
    ],
    "vue/array-bracket-spacing": [
      "off",
    ],
    "vue/arrow-spacing": [
      "off",
    ],
    "vue/block-spacing": [
      "off",
    ],
    "vue/block-tag-newline": [
      "off",
    ],
    "vue/brace-style": [
      "off",
    ],
    "vue/comma-dangle": [
      "off",
    ],
    "vue/comma-spacing": [
      "off",
    ],
    "vue/comma-style": [
      "off",
    ],
    "vue/dot-location": [
      "off",
    ],
    "vue/func-call-spacing": [
      "off",
    ],
    "vue/html-closing-bracket-newline": [
      "off",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "off",
    ],
    "vue/html-indent": [
      "off",
    ],
    "vue/html-quotes": [
      "off",
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      "off",
    ],
    "vue/keyword-spacing": [
      "off",
    ],
    "vue/max-attributes-per-line": [
      "off",
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      "off",
    ],
    "vue/multiline-ternary": [
      "off",
    ],
    "vue/mustache-interpolation-spacing": [
      "off",
    ],
    "vue/no-extra-parens": [
      "off",
    ],
    "vue/no-multi-spaces": [
      "off",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "off",
    ],
    "vue/object-curly-newline": [
      "off",
    ],
    "vue/object-curly-spacing": [
      "off",
    ],
    "vue/object-property-newline": [
      "off",
    ],
    "vue/operator-linebreak": [
      "off",
    ],
    "vue/quote-props": [
      "off",
    ],
    "vue/script-indent": [
      "off",
    ],
    "vue/singleline-html-element-content-newline": [
      "off",
    ],
    "vue/space-in-parens": [
      "off",
    ],
    "vue/space-infix-ops": [
      "off",
    ],
    "vue/space-unary-ops": [
      "off",
    ],
    "vue/template-curly-spacing": [
      "off",
    ],
    "wrap-iife": [
      "off",
      "any",
      {
        "functionPrototypeMethods": true,
      },
    ],
    "wrap-regex": [
      "off",
    ],
    "yield-star-spacing": [
      "off",
      "both",
    ],
    "yoda": [
      "error",
      "never",
    ],
  },
  "settings": {
    "import/extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
    ],
    "import/external-module-folders": [
      "node_modules",
      "node_modules/@types",
    ],
    "import/parsers": {
      "@typescript-eslint/parser": [
        ".ts",
        ".tsx",
      ],
    },
    "import/resolver": {
      "node": {
        "extensions": [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
        ],
      },
      "typescript": {
        "alwaysTryTypes": true,
        "project": "./tsconfig.json",
      },
    },
  },
}
`;
